<?xml version="1.0"?>
<package format="3">
  <name>fullfilment</name>
  <version>0.0.1</version>
  <description>The fullfilment package for AMR control</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <!-- Dependencies -->
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>fullfilment_interfaces</depend>

  <!-- Test dependencies -->
  <test_depend>pytest</test_depend>
</package>
